--- a/src/main/webapp/css/admin/add-poll.css
+++ b/src/main/webapp/css/admin/add-poll.css
@@ -22,10 +22,28 @@ h2 {
     width: 60%;
     margin: 0 auto;
     background: rgba(37, 154, 59, 0.351);
-    padding-top: 70px;
+
     margin-top: 100px;
-    padding: 20px;
+    height: auto;
+    padding: 30px;
     border-radius: 20px;
+}
+
+
+@media (max-width: 700px) {
+    .form-container {
+    width: auto;
+    }
+}
+
+@media (max-width: 380px) {
+     body {
+        padding: 5px;
+     }
+    .form-container {
+
+    width: 100%;
+    }
 }
 
 form {
