--- a/src/main/webapp/css/auth/sign-up.css
+++ b/src/main/webapp/css/auth/sign-up.css
@@ -6,25 +6,44 @@
     font: inherit;
     vertical-align: baseline;
 }
-    
+
 body {
     background: #ffffff;
     font-family: 'Roboto', sans-serif;
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 30px;
     text-align: center;
-    font-weight: 300;
     text-transform: capitalize;
-    letter-spacing: 4px;
+
+    text-rendering: optimizeSpeed;
+
 }
 
 a {
+    background: #00000000;
+    color: inherit;
+    font-size: 100%;
+    margin: 0;
+    padding: 0;
     text-decoration: none;
 }
 
+
+strong {
+    font-weight: 700;
+}
+
+
+p {
+    margin: 0 0 20px;
+}
+
+
 .sign-up-section {
+    padding: 10px;
+    padding-top: 60px;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -58,7 +77,7 @@ a {
 .gender-form {
     border: 0;
     display: flex;
-    gap: 15px;
+    gap: 10px;
     justify-content: center;
 }
 
