--- a/src/main/webapp/css/fragments/footer.css
+++ b/src/main/webapp/css/fragments/footer.css
@@ -1,78 +1,17 @@
 
-.navbar {
-    position: fixed;
-    top: 0;
-    z-index: 100;
+.footer-section {
+    background: #272928;
+    height: 150px;
     width: 100%;
-    height: 72px;
-    background-color: #FFFFFF;
-}
-
-@media (min-width:1024px) {
-    .navbar {
-        height: 88px;
-    }
-}
-
-.navbar-container {
-    max-width: 1370px;
-    margin: auto;
-    padding: 0 24px;
     display: flex;
-    justify-content: space-between;
-    height: inherit;
+    text-align: center;
     align-items: center;
-
+    justify-content: space-evenly;
+    color: #FFFFFF;
 }
 
-.navbar-menu {
-    display: flex;
-    flex-wrap: wrap;
-}
-@media (max-width:500px) {
-    .navbar {
-        height : 90px;
-    }
-    .logo-container h1 {
-        font-size: 20px;
-    }
-    .navbar-menu .home {
-        display : none
-    }
-
-    .navbar-menu {
-        padding: 0 0;
-    }
-    .navbar-menu a {
-        font-size : 15px;
-    }
-
-}
-
-@media (max-width:400px) {
-    .navbar-menu a {
-        font-size : 12px;
+@media (min-width: 1024px) {
+    .footer-section {
+        border-top: none;
     }
 }
-
-.navbar-menu-element {
-    background-color: #00000000;
-    color: inherit;
-    cursor: pointer;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: inherit;
-    font-size: 16px;
-    line-height: 1.5;
-    margin-left: 16px;
-    padding: 8px;
-}
-
-.navbar-menu-element:hover {
-    opacity: 0.8;
-}
-
-
-
