add styling for 'red' class

--- a/src/main/webapp/css/admin/add-poll.css
+++ b/src/main/webapp/css/admin/add-poll.css
@@ -121,5 +121,12 @@ button:hover {
     align-content: space-between;
     padding: 20px;
     gap: 10px;
+}
 
+.red {
+   background-color: #CD5C5C;
+}
+
+.red:hover {
+    background-color: #ED2939;
 }
