adds poll status display

--- a/src/main/webapp/css/user/polls.css
+++ b/src/main/webapp/css/user/polls.css
@@ -62,10 +62,6 @@ p {
     opacity: 0.8;
 }
 
-.taken-button {
-    background: rgb(174, 41, 41);
-}
-
 .taken-button:hover {
     cursor: not-allowed;
 }
@@ -184,4 +180,10 @@ p {
 
 .post-text h2 {
     font-size: 20px;
+}
+
+
+.status {
+    margin: 5px;
+    background: #87CEEB;
 }
